# lens-backend

./: .coverage  .dockerignore  .env.example  .gitignore  .release-please-config.json  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pr-title.yml  publish-docker.yml  release-please.yml
src/: config.py  database.py  main.py  models.py  schemas.py
src/api/: dependencies.py  routes.py
src/api/v1/: events.py
src/core/: config.py  database.py  logging.py
src/repositories/: dynamo.py  mongo.py  protocol.py
tests/: conftest.py  test_api.py
