[project]
name = "lens-backend"
version = "0.1.0"
description = "Backend for Lens application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "fastapi>=0.137.1",
    "motor>=3.7.1",
    "pydantic-settings>=2.14.1",
    "slowapi>=0.1.10",
    "uvicorn[standard]>=0.49.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "ruff>=0.15.15",
]


