[project]
name = "lens-backend"
version = "0.6.0"
description = "Backend for Lens application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "fastapi>=0.137.1",
    "fastapi-cache2>=0.2.2",
    "jinja2>=3.1.6",
    "motor>=3.7.1",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "slowapi>=0.1.10",
    "uvicorn[standard]>=0.49.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.15",
]



[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
env = [
    "DATABASE_TYPE=mock",
]
